changed file name

--- a/Main/index.html
+++ b/Main/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Sagar Hulle All Assignments Links</h1>
 
-    <a href="../Basic/Tribute.html" target="_blank">1. Tribute Page</a> <br />
+    <a href="/basic/tribute.html" target="_blank">1. Tribute Page</a> <br />
     <br />
 
     <a
@@ -18,10 +18,10 @@
     >
     <br />
     <br />
-    <a href="../HTML CSS/index.html" target="_blank">3. Create UI using CSS</a>
+    <a href="/html-css/index.html" target="_blank">3. Create UI using CSS</a>
     <br />
     <br />
-    <a href="../WebPage with flexbox/index.html" target="_blank"
+    <a href="/webpage-with-flexbox/index.html" target="_blank"
       >4. Webpage using flexbox</a
     >
   </body>
