--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Sagar Hulle All Assignments Links</h1>
 
-    <a href="./basic/tribute.html" target="_blank">1. Tribute Page</a> <br />
+    <a href="./basic/index.html" target="_blank">1. Tribute Page</a> <br />
     <br />
 
     <a
