--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WS-Assignment</title>
   </head>
   <body>
     <h1>Sagar Hulle All Assignments Links</h1>
@@ -24,8 +24,5 @@
     <a href="./webpage-with-flexbox/index.html" target="_blank"
       >4. Webpage using flexbox</a
     >
-    <br />
-    <br />
-    <a href="./next-assignments/index.html">Testing </a>
   </body>
 </html>
