--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <body>
     <h1>Sagar Hulle All Assignments Links</h1>
 
-    <a href="./basic/index.html" target="_blank">1. Tribute Page</a> <br />
+    <a href="./create-tribute-page-in-html/index.html" target="_blank"
+      >1. Tribute Page</a
+    >
+    <br />
     <br />
 
-    <a
-      href="#"
-      onclick="alert('sorry something went wrong please contact with admin who is in B74 Roll No. 02...')"
+    <a href="./create-a-website-with-css/index.html" target="_blank"
       >2. Create a website using CSS</a
     >
     <br />
