added some things

--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -115,5 +115,51 @@
         </div>
       </div>
     </div>
+
+    <div class="our-features">
+      <p>Features</p>
+      <h4>Our Advacedd Features</h4>
+
+      <div class="main-feature">
+        <div class="image">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/features.png"
+            alt="Our Feature Image"
+          />
+        </div>
+
+        <div class="cards">
+          <div class="card">
+            <div class="box-tick">✔️</div>
+            <h3>Eos aspernatur rem</h3>
+          </div>
+
+          <div class="card">
+            <div class="box-tick">✔️</div>
+            <h3>Facilis neque ipsa</h3>
+          </div>
+
+          <div class="card">
+            <div class="box-tick">✔️</div>
+            <h3>Volup amet volupt</h3>
+          </div>
+
+          <div class="card">
+            <div class="box-tick">✔️</div>
+            <h3>Rerum omnis sint</h3>
+          </div>
+
+          <div class="card">
+            <div class="box-tick">✔️</div>
+            <h3>Alias possimus</h3>
+          </div>
+
+          <div class="card">
+            <div class="box-tick">✔️</div>
+            <h3>Repellendus molli</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
