new feature service

--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -161,5 +161,66 @@
         </div>
       </div>
     </div>
+
+    <div class="our-services">
+      <p>Services</p>
+      <h4>Check Our Services</h4>
+
+      <div class="cards">
+        <div class="card" id="blue">
+          <h3>Nesciunt Mete</h3>
+          <span>
+            Provident nihil minus qui consequatur non omnis maiores. Eos
+            accusantium minus dolores iure perferendis tempore et consequatur.
+          </span>
+          <a href="#">Read More -></a>
+        </div>
+
+        <div class="card" id="orange">
+          <h3>Eosle Commodi</h3>
+          <span>
+            Ut autem aut autem non a. Sint sint sit facilis nam iusto sint.
+            Libero corrupti neque eum hic non ut nesciunt dolorem.
+          </span>
+          <a href="#">Read More -></a>
+        </div>
+
+        <div class="card" id="green">
+          <h3>Ledo Markt</h3>
+          <span>
+            Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea
+            aut. Vel qui id voluptas adipisci eos earum corrupti.
+          </span>
+          <a href="#">Read More -></a>
+        </div>
+
+        <div class="card" id="red">
+          <h3>Asperiores Commodi</h3>
+          <span>
+            Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate
+            sed error ea fuga sit provident adipisci neque.
+          </span>
+          <a href="#">Read More -></a>
+        </div>
+
+        <div class="card" id="purple">
+          <h3>Velit Doloremque.</h3>
+          <span>
+            Cumque et suscipit saepe. Est maiores autem enim facilis ut aut
+            ipsam corporis aut. Sed animi at autem alias eius labore.
+          </span>
+          <a href="#">Read More -></a>
+        </div>
+
+        <div class="card" id="pink">
+          <h3>Dolori Architecto</h3>
+          <span>
+            Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non
+            et debitis iure. Corrupti recusandae ducimus enim.
+          </span>
+          <a href="#">Read More -></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
