--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -222,5 +222,96 @@
         </div>
       </div>
     </div>
+
+    <div class="portfolio">
+      <p>Portfolio</p>
+      <h4>Check our latest work</h4>
+
+      <div class="cards">
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/portfolio/app-1.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/product-1.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/branding-1.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/books-1.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/app-2.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/product-2.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/portfolio/branding-2.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/books-2.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="	https://themewagon.github.io/FlexStart/assets/img/portfolio/app-3.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/portfolio/product-3.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/portfolio/branding-3.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/portfolio/books-3.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
