new feature added

--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -313,5 +313,91 @@
         </div>
       </div>
     </div>
+
+    <div class="team">
+      <p>Team</p>
+      <h4>Our hard working team</h4>
+
+      <div class="cards">
+        <div class="card">
+          <div class="image">
+            <img
+              src="	https://themewagon.github.io/FlexStart/assets/img/team/team-1.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="card-content">
+            <h2>Walter White</h2>
+            <span>Chief Executive Officer</span>
+            <br />
+            <h6>
+              Velit aut quia fugit et et. Dolorum ea voluptate vel tempore
+              tenetur ipsa quae aut. Ipsum exercitationem iure minima enim
+              corporis et voluptate.
+            </h6>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img
+              src="		https://themewagon.github.io/FlexStart/assets/img/team/team-2.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="card-content">
+            <h2>Sarah Jhonson</h2>
+            <span>Product Manager</span>
+            <br />
+            <h6>
+              Quo esse repellendus quia id. Est eum et accusantium pariatur
+              fugit nihil minima suscipit corporis. Voluptate sed quas
+              reiciendis animi neque sapiente.
+            </h6>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img
+              src="	https://themewagon.github.io/FlexStart/assets/img/team/team-3.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="card-content">
+            <h2>William Anderson</h2>
+            <span>CTO</span>
+            <br />
+            <h6>
+              Vero omnis enim consequatur. Voluptas consectetur unde qui
+              molestiae deserunt. Voluptates enim aut architecto porro
+              aspernatur molestiae modi.
+            </h6>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image">
+            <img
+              src="https://themewagon.github.io/FlexStart/assets/img/team/team-4.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="card-content">
+            <h2>Amanda Jepson</h2>
+            <span>Accountant</span>
+            <br />
+            <h6>
+              Rerum voluptate non adipisci animi distinctio et deserunt amet
+              voluptas. Quia aut aliquid doloremque ut possimus ipsum officia.
+            </h6>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
