--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -399,5 +399,54 @@
         </div>
       </div>
     </div>
+
+    <div class="clients">
+      <p>Clients</p>
+      <h4>We work with best clients</h4>
+
+      <div class="cards">
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/clients/client-8.png"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/clients/client-1.png"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/clients/client-2.png"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/clients/client-4.png"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/clients/client-5.png"
+            alt=""
+          />
+        </div>
+
+        <div class="card">
+          <img
+            src="https://themewagon.github.io/FlexStart/assets/img/clients/client-7.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
