added new feature contact us

--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -448,5 +448,44 @@
         </div>
       </div>
     </div>
+
+    <div class="contact">
+      <p>CONTACT</p>
+      <h4>Contact Us</h4>
+
+      <div class="contact-main-card">
+        <!-- LEFT -->
+        <div class="contact-left-card">
+          <div class="card">
+            <h2>Address</h2>
+            <span>A108 Adam Street<br />New York, NY 535022</span>
+          </div>
+
+          <div class="card">
+            <h2>Call Us</h2>
+            <span>+1 5589 55488 55<br />+1 6678 254445 41</span>
+          </div>
+
+          <div class="card">
+            <h2>Email Us</h2>
+            <span>info@example.com<br />contact@example.com</span>
+          </div>
+
+          <div class="card">
+            <h2>Open Hours</h2>
+            <span>Monday - Friday<br />9:00AM - 05:00PM</span>
+          </div>
+        </div>
+
+        <!-- RIGHT -->
+        <div class="contact-right-card">
+          <input type="text" placeholder="Your Name" />
+          <input type="email" placeholder="Your Email" />
+          <input type="text" placeholder="Subject" />
+          <textarea placeholder="Message"></textarea>
+          <button>Send Message</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
