added new feature news-letter

--- a/create-website-using-html-&-css/index.html
+++ b/create-website-using-html-&-css/index.html
@@ -487,5 +487,18 @@
         </div>
       </div>
     </div>
+
+    <div class="news-letter">
+      <p>Join Our Newsletter</p>
+      <h5>
+        Subscribe to our newsletter and receive the latest news about our
+        products and services!
+      </h5>
+
+      <div class="inputs">
+        <input type="text" name="" id="" />
+        <button>Subscribe</button>
+      </div>
+    </div>
   </body>
 </html>
