--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
     <a href="./create-website-using-html-&-css/index.html" target="_blank"
       >5. Create Website Using HTML & CSS</a
     >
+    <br />
+    <br />
+    <a href="./happy-new-year-animated-page/index.html" target="_blank"
+      >6. Happy New Year Animated Page</a
+    >
   </body>
 </html>
