Upcoming New Project Clone

--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
     <a href="./happy-new-year-animated-page/index.html" target="_blank"
       >6. Happy New Year Animated Page</a
     >
+    <br />
+    <br />
+    <a href="" onclick="alert('Work is in progress. Come after 11-01-2025 👦🏼');"
+      >7. Clone Project</a
+    >
   </body>
 </html>
