One Committ a day

--- a/clone-project/index.html
+++ b/clone-project/index.html
@@ -6,5 +6,8 @@
     <title>Clone</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Developer is working on this project please come after 12-01-2026</h1>
+    <p>Till then have a nice day 👦🏼</p>
+  </body>
 </html>
