--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     >
     <br />
     <br />
-    <a href="" onclick="alert('Work is in progress. Come after 11-01-2025 👦🏼');"
+    <a
+      href="./clone-project/index.html"
+      onclick="alert('Work is in progress. Come after 11-01-2025 👦🏼');"
       >7. Clone Project</a
     >
   </body>
