removed on-click from clone

--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
     >
     <br />
     <br />
-    <a
-      href="./clone-project/index.html"
-      onclick="alert('Work is in progress. Come after 11-01-2025 👦🏼');"
-      >7. Clone Project</a
-    >
+    <a href="./clone-project/index.html">7. Clone Project</a>
   </body>
 </html>
