--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     >
     <br />
     <br />
-    <a href="./clone-project/index.html">7. Clone Project</a>
+    <a href="./clone-project/index.html" target="_blank">7. Clone Project</a>
   </body>
 </html>
