--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
     <br />
     <br />
     <a href="./clone-project/index.html" target="_blank">7. Clone Project</a>
+    <br />
+    <br />
+    <a href="./create-a-bootstrap-website/index.html" target="_blank"
+      >8. Bootstrap Website</a
+    >
   </body>
 </html>
