--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
     <a href="./clone-project/index.html" target="_blank">7. Clone Project</a>
     <br />
     <br />
-    <a href="./create-a-bootstrap-website/index.html  " target="_blank"
+    <a href="./create-a-bootstrap-website/index.html" target="_blank"
       >8. Bootstrap Website</a
+    >
+    <br />
+    <br />
+    <a href="./create-a-bootstrap-portfolio/index.html" target="_blank"
+      >9. Bootstrap Portfolio Website</a
     >
   </body>
 </html>
