added new feature carousel

--- a/tindog/index.html
+++ b/tindog/index.html
@@ -42,6 +42,88 @@
     </section>
     <!-- features -->
 
+    <!-- Carousel -->
+    <section id="carousel">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h3 class="text-center">
+              "My dog used to be so lonely, but with TinDog's help, they've
+              found the love of their life. I think."
+            </h3>
+            <div class="d-flex testimonial-image">
+              <img
+                src="https://rosajen27.github.io/tindog/images/lady-img.jpg"
+                class="d-block"
+                alt="girl image"
+              />
+              <span> Beverly, Illinois</span>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <h3 class="text-center">
+              "I no longer have to sniff other dogs for love. I've found the
+              hottest Corgi on TinDog. Woof!"
+            </h3>
+            <div class="d-flex testimonial-image">
+              <img
+                src="https://rosajen27.github.io/tindog/images/dog-img.jpg"
+                class="d-block"
+                alt="girl image"
+              />
+              <span> Pebbles, New York</span>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+      <section id="press">
+        <img
+          class="press-img"
+          src="https://rosajen27.github.io/tindog/images/techcrunch.png"
+          alt="tc-logo"
+        />
+        <img
+          class="press-img"
+          src="https://rosajen27.github.io/tindog/images/tnw.png"
+          alt="tnw-logo"
+        />
+        <img
+          class="press-img"
+          src="https://rosajen27.github.io/tindog/images/bizinsider.png"
+          alt="biz-insider-logo"
+        />
+        <img
+          class="press-img"
+          src="https://rosajen27.github.io/tindog/images/mashable.png"
+          alt="mashable-logo"
+        />
+      </section>
+    </section>
+    <!-- Carousel -->
+
     <!-- pricing -->
     <section id="pricing">
       <h1 class="text-center">A Plan for Every Dog's Needs</h1>
