--- a/tindog/index.html
+++ b/tindog/index.html
@@ -17,6 +17,57 @@
     <title>TinDog</title>
   </head>
   <body>
+    <!-- Header -->
+    <section id="header">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand fs-3" href="#header">TinDog</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#love">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <h3 class="text-light fs-1 fw-bolder">
+            Meet new and interesting dogs nearby.
+          </h3>
+          <button class="download-btn btn btn-dark">Download</button>
+          <button class="download-btn btn btn-outline-light text-light">
+            Download
+          </button>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <img
+            src="https://rosajen27.github.io/tindog/images/iphone6.png"
+            alt="header image"
+            class="header_image"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- Header -->
+
     <!-- features -->
     <section id="features">
       <div class="row text-center">
