new added something

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -48,5 +48,8 @@
     <a href="./create-a-bootstrap-portfolio/index.html" target="_blank"
       >9. Bootstrap Portfolio Website</a
     >
+    <br />
+    <br />
+    <a href="./tindog/index.html" target="_blank">10. TinDog Project</a>
   </body>
 </html>
