one change done

--- a/foodmart-clone-bootstrap/index.html
+++ b/foodmart-clone-bootstrap/index.html
@@ -89,7 +89,7 @@
 
       <div class="row g-4">
         <!-- Product Card -->
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -120,7 +120,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-biscuits.png"
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-cucumber.png"
@@ -182,7 +182,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-milk.png"
@@ -213,7 +213,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -244,7 +244,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -275,7 +275,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-biscuits.png"
@@ -306,7 +306,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -336,7 +336,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-biscuits.png"
@@ -367,7 +367,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-cucumber.png"
@@ -412,9 +412,9 @@
         </div>
       </div>
 
-      <div class="row g-4">
+      <div class="d-flex flex-nowrap gap-4 overflow-auto">
         <!-- Product Card -->
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -445,7 +445,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-biscuits.png"
@@ -476,7 +476,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-cucumber.png"
@@ -507,7 +507,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-milk.png"
@@ -538,7 +538,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -569,7 +569,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -600,7 +600,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-biscuits.png"
@@ -631,7 +631,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-bananas.png"
@@ -661,7 +661,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-biscuits.png"
@@ -692,7 +692,7 @@
           </div>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3" style="width: 18rem">
+        <div class="flex-shrink-0" style="width: 18rem">
           <div class="card h-100">
             <img
               src="https://themewagon.github.io/FoodMart/images/thumb-cucumber.png"
