--- a/create-a-bootstrap-portfolio/index.html
+++ b/create-a-bootstrap-portfolio/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -70,7 +70,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://drive.google.com/file/d/1lNO3NVh8UMWFUdmPozwiiw_wgu0D5TKG/view?usp=drive_link"
+                href="https://drive.google.com/file/d/1lNO3NVh8UMWFUdmPozwiiw_wgu0D5TKG/view?usp=sharing"
                 target="_blank"
                 >Resume</a
               >
@@ -105,7 +105,7 @@
                 View Projects
               </a>
               <a
-                href="https://drive.google.com/file/d/1lNO3NVh8UMWFUdmPozwiiw_wgu0D5TKG/view?usp=drive_link"
+                href="https://drive.google.com/file/d/1lNO3NVh8UMWFUdmPozwiiw_wgu0D5TKG/view?usp=sharing"
                 target="_blank"
                 class="btn btn-outline-dark btn-custom"
               >
