--- a/index.html
+++ b/index.html
@@ -56,5 +56,10 @@
     <a href="./foodmart-clone-bootstrap/index.html" target="_blank"
       >11. FoodMart Clone Bootstrap</a
     >
+    <br />
+    <br />
+    <a href="./natural-ice-cream/index.html" target="_blank"
+      >12. Natural Ice Cream</a
+    >
   </body>
 </html>
