added extra files

--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -73,7 +73,14 @@
         style="list-style-type: none"
         class="text-light d-flex justify-content-center align-items-center gap-5"
       >
-        <li>Tree To Treat</li>
+        <li>
+          <a
+            href="./ingredient-story.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Tree To Treat</a
+          >
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -92,11 +99,29 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
-        <li>Our Legacy</li>
-        <li>Malai Magic</li>
-        <li>Franchise Queries</li>
-        <li>Store Locator</li>
-        <li>Blogs</li>
+        <li>
+          <a
+            href="./our-legacy.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Our Legacy</a
+          >
+        </li>
+        <li>
+          <a href="" class="text-light" style="text-decoration: none"></a>Malai
+          Magic
+        </li>
+        <li>
+          <a href="" class="text-light" style="text-decoration: none"></a
+          >Franchise Queries
+        </li>
+        <li>
+          <a href="" class="text-light" style="text-decoration: none"></a>Store
+          Locator
+        </li>
+        <li>
+          <a href="" class="text-light" style="text-decoration: none">Blogs</a>
+        </li>
       </ul>
     </div>
     <!-- list items -->
@@ -425,7 +450,6 @@
         <a href="" class="btn btn-success text-light my-3">Read More</a>
       </section>
     </div>
-
     <!--Main Section  -->
 
     <!-- Footer Swiggy Zomato -->
@@ -465,7 +489,7 @@
     <!-- footer -->
     <footer
       class="text-light d-flex justify-content-between p-5"
-      style="background-color: #362f2f"
+      style="background-color: #232020"
     >
       <div class="contact-us" style="width: 30%">
         <p style="color: #989898; font-weight: bold">Contact Us</p>
