added new features

--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -108,12 +108,20 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none"></a>Malai
-          Magic
+          <a
+            href="./malai.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Malai Magic</a
+          >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none"></a
-          >Franchise Queries
+          <a
+            href="./franchise-queries.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Franchise Queries</a
+          >
         </li>
         <li>
           <a href="" class="text-light" style="text-decoration: none"></a>Store
@@ -489,7 +497,7 @@
     <!-- footer -->
     <footer
       class="text-light d-flex justify-content-between p-5"
-      style="background-color: #232020"
+      style="background-color: #232020; position: fixed; bottom: 0; width: 100%"
     >
       <div class="contact-us" style="width: 30%">
         <p style="color: #989898; font-weight: bold">Contact Us</p>
