--- a/natural-ice-cream/malai.html
+++ b/natural-ice-cream/malai.html
@@ -117,8 +117,12 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none"></a
-          >Franchise Queries
+          <a
+            href="./franchise-queries.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Franchise Queries</a
+          >
         </li>
         <li>
           <a href="" class="text-light" style="text-decoration: none"></a>Store
