natural index footer

--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -497,7 +497,7 @@
     <!-- footer -->
     <footer
       class="text-light d-flex justify-content-between p-5"
-      style="background-color: #232020; position: fixed; bottom: 0; width: 100%"
+      style="background-color: #232020"
     >
       <div class="contact-us" style="width: 30%">
         <p style="color: #989898; font-weight: bold">Contact Us</p>
