--- a/natural-ice-cream/blogs.html
+++ b/natural-ice-cream/blogs.html
@@ -177,13 +177,15 @@
               "
             >
               <h5
-                class="card-title text-uppercase text-center"
+                class="card-title text-uppercase text-center card-hover"
                 style="font-size: 15px; line-height: 25px; font-weight: bold"
               >
                 Make Your Holidays Sweeter with Natural’s Ice Cream Santa
                 Contest
               </h5>
-              <a href="#" class="btn btn-success text-light text-center my-2"
+              <a
+                href="./blogs/make-your-holidays-sweeter-with-naturals-ice-cream-santa-contest.html"
+                class="btn btn-success text-light text-center my-2"
                 >View Receipe</a
               >
             </div>
@@ -211,7 +213,7 @@
                 Add a Sweet Twist to Your Festivities with Raspberry
               </h5>
               <a
-                href="#"
+                href="./blogs/add-a-sweet-twist-to-your-festivities-with-raspberry-chocolate-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -241,7 +243,7 @@
                 3 Winter-Inspired Ice Cream You’ll Love
               </h5>
               <a
-                href="#"
+                href="./blogs/winter-inspired-ice-cream-youll-love.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -271,7 +273,7 @@
                 Sweeten Your Countdown with Persian Delight Ice Cream
               </h5>
               <a
-                href="#"
+                href="./blogs/sweeten-your-countdown-with-persian-delight-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -301,7 +303,7 @@
                 Try Prasadam Ice Cream A Sweet Offering for This Ganesh
               </h5>
               <a
-                href="#"
+                href="./blogs/try-prasadam-ice-cream-a-sweet-offering-for-this-ganesh-chaturthi.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -331,7 +333,7 @@
                 Why You Need to Try Peach Apricot Ice Cream This Monsoon?
               </h5>
               <a
-                href="#"
+                href="./blogs/why-you-need-to-try-peach-apricot-ice-cream-this-monsoon.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -361,7 +363,7 @@
                 Craving Something Cool This Monsoon? Try Naturals Sitaphal Ic
               </h5>
               <a
-                href="#"
+                href="./blogs/craving-something-cool-this-monsoon-try-naturals-sitaphal-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -391,7 +393,7 @@
                 The Journey of Kala Jamun into Ice Cream
               </h5>
               <a
-                href="#"
+                href="./blogs/the-journey-of-kala-jamun-into-ice-cream.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -421,7 +423,7 @@
                 Why Lychee Ice Cream Belongs in Every Summer Party?
               </h5>
               <a
-                href="#"
+                href="./blogs/why-lychee-ice-cream-belongs-in-every-summer-party.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
