--- a/natural-ice-cream/index.html
+++ b/natural-ice-cream/index.html
@@ -29,6 +29,11 @@
         font-weight: weight;
         font-style: normal;
       }
+
+      img:hover {
+        scale: 1.05;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -124,11 +129,20 @@
           >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none"></a>Store
-          Locator
+          <a
+            href="./store-locator.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Store Locator</a
+          >
         </li>
         <li>
-          <a href="" class="text-light" style="text-decoration: none">Blogs</a>
+          <a
+            href="./blogs.html"
+            class="text-light"
+            style="text-decoration: none"
+            >Blogs</a
+          >
         </li>
       </ul>
     </div>
