added more features in natural

--- a/natural-ice-cream/malai.html
+++ b/natural-ice-cream/malai.html
@@ -191,7 +191,9 @@
               <h5 class="card-title text-uppercase text-center">
                 Mango Oats Pudding
               </h5>
-              <a href="#" class="btn btn-success text-light text-center my-2"
+              <a
+                href="./malai-receipes/mango-oats-pudding.html"
+                class="btn btn-success text-light text-center my-2"
                 >View Receipe</a
               >
             </div>
@@ -216,7 +218,7 @@
                 Bread Malai Roll
               </h5>
               <a
-                href="#"
+                href="./malai-receipes//bread-malai-roll.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -243,7 +245,7 @@
                 Mango Milk Pudding Bites
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/mango-milk-pudding-bites.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -270,7 +272,7 @@
                 Mango Bombolonis
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/mango-bombolonis.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -295,7 +297,7 @@
             >
               <h5 class="card-title text-uppercase text-center">Mango Barfi</h5>
               <a
-                href="#"
+                href="./malai-receipes/mango-barfi.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -322,7 +324,7 @@
                 Muskmelon Shake
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/muskmelon-shake.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -349,7 +351,7 @@
                 Mango Shahi Tukda
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/mango-shahi-tukda.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -376,7 +378,7 @@
                 Mango Panna Cotta
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/mango-panna-cotta.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
@@ -403,7 +405,7 @@
                 Strawberry Sago Delight
               </h5>
               <a
-                href="#"
+                href="./malai-receipes/strawberry-sago-delight.html"
                 class="btn btn-success text-light text-center my-2"
                 style="margin-top: 10px"
                 >View Receipe</a
